# ocr

./: .gitignore  Dockerfile  README.md  ocr.proto  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md  common_errors.md  future_improvements.md  pipeline.md
proto/: ocr.proto  types.proto
src/ocr_pypi/: config.py  grpc_server.py  server.py  storage.py
src/ocr_pypi/chunking/: chunking_strategy.py  llm_chunker.py  page_chunker.py  paragraph_chunker.py  semantic_chunker.py
src/ocr_pypi/chunking/llm_providers/: __init__.py  anthropic_provider.py  factory.py  (+2 more)
src/ocr_pypi/cleaning/: header_footer_detector.py  noise_remover.py
src/ocr_pypi/detection/: pdf_type_detector.py
src/ocr_pypi/extraction/: pymupdf_extractor.py  text_extractor.py
src/ocr_pypi/layout/: layout_analyzer.py  reading_order_reconstructor.py
src/ocr_pypi/models/: document.py  ocr_types.py  pdf_types.py  pipeline_types.py
src/ocr_pypi/ocr/: ocr_block.py  ocr_engine.py  tesseract_engine.py
src/ocr_pypi/output/: json_formatter.py
src/ocr_pypi/preprocessing/: image_preprocessor.py
src/ocr_pypi/proto/: __init__.py  ocr_pb2.py  ocr_pb2_grpc.py  types_pb2.py
src/ocr_pypi/semantic/: legal_patterns.py  section_classifier.py
src/ocr_pypi/services/: document_processor.py
src/ocr_pypi/vision/: __init__.py  image_descriptor.py  image_detector.py  smart_image_detector.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_chunking_new.py  test_layout_reconstructor.py  test_noise_remover.py  test_ocr_engine.py  test_pdf_detector.py  test_section_classifier.py
(+9 files in other folders)
